name:           chrissrogers
version:        0.0.1
synopsis:       Personal website
homepage:       https://github.com/chrissrogers/chrissrogers.com
license:        AllRightsReserved
author:         Christopher Rogers
maintainer:     chrissrogers@gmail.com
category:       Web
build-type:     Simple
cabal-version:  >= 1.18.0.2

executable chrissrogers
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:
    base < 5,
    resourcet,
    scotty >= 0.6.2,
    wai-middleware-static,
    wai-extra,
    blaze-html
